# optra

./: .env.example  .gitignore  README.md  install.sh  pyproject.toml
optra/: agent.py  cli.py  config.py  profile.py
optra/adapters/: base.py  notion.py  slack.py
optra/auth/: notion_oauth.py  slack_oauth.py  store.py
optra/engine/: collector.py  search.py  summarizer.py
optra/models/: db.py  work_item.py
server/: main.py  state.py  stream.py
server/routes/: auth.py  chat.py
web/: index.html  package-lock.json  package.json
web/src/: App.tsx  index.css
web/src/components/: ChatInput.tsx  ChatView.tsx  LandingView.tsx  MessageList.tsx  OnboardingBanner.tsx  QuickActions.tsx  Sidebar.tsx  ToolIndicator.tsx
web/src/hooks/: useAuth.ts  useChat.ts  useConversations.ts
worklog/: cli.py  config.py
worklog/adapters/: base.py  notion.py  slack.py
worklog/auth/: notion_oauth.py  server.py  slack_oauth.py  store.py
worklog/engine/: collector.py  search.py  summarizer.py
worklog/models/: db.py
