[project]
name = "worklog"
version = "0.1.0"
description = "Personal work history aggregator from collaboration tools"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.15.0",
    "rich>=13.0.0",
    "slack-sdk>=3.33.0",
    "notion-client>=2.2.0",
    "anthropic>=0.42.0",
    "sqlmodel>=0.0.22",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.6.0",
    "beautifulsoup4>=4.12.0",
]

[project.scripts]
worklog = "worklog.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["worklog"]
